# pokerbots-2026

./: .gitignore  README.md  config.py  engine.py  gamelog_summary.txt
Camello_1.0.2/: player.py
Camello_1.0.3/: player.py
Camello_1.0.3/skeleton/: runner.py
Camello_2.0.0/: player.py
Camello_3.0.0/: generate.py  player.py  temp.txt
Camello_3.1.0/: player.py  print_equity.py  two_card_equity.pkl  two_card_equity.txt
Camello_3.2.0/: generate_2c.py  player.py  preflop_scores.txt  temp.pkl  test_equity.py
Camello_AI/: player.py
Camello_cfr/: abstraction.py  cpp_cfr.py  diagnose_cfr.py  player.py
Camello_cfr copy/: abstraction.py  cpp_cfr.py  player.py  preflop_scores.pkl
Camello_cfr copy/tools/: remove_stack_bucket.py
Camello_cfr_old/: player.py
Week_1_Bots/Camello_2.0.0/: generate.py  preflop_equity_table.pkl
cpp_skeleton/: CMakeLists.txt
cpp_skeleton/libs/skeleton/src/: states.cpp
java_skeleton/javabot/skeleton/: Action.java  ActionType.java  RoundState.java  TerminalState.java
python_skeleton/: player.py
tossem_cfr_cpp/: CMakeLists.txt  README.md
tossem_cfr_cpp/src/: abstraction.cpp  abstraction.h  game_state.cpp  game_state.h  hand_eval.cpp  hand_eval.h  main.cpp
